src/test/06-Errors/error-return-not-all-3.txt
error-return-not-all-3.ck:3:5: error: not all control paths in 'fun float foo(int a, int b)' return a value
[3] fun float foo( int a, int b )
        ^
